--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,4 +1,3 @@
----
 image:
   file: .gitpod.dockerfile
 
@@ -49,3 +48,4 @@ vscode:
     - golang.go
     - bpruitt-goddard.mermaid-markdown-syntax-highlighting
     - bierner.markdown-mermaid
+    - grain-lang.vscode-grain
