--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,7 +23,7 @@ jobs:
           project_path: "./"
           binary_name: "procyon"
           ldflags: "-s -w"
-          extra_files: procyon.json
+          extra_files: procyon.json ./procyonctl/procyonctl ./procyonctl/procyon.config
       - uses: wangyoucao577/go-release-action@v1.16
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
