--- a/procyonctl/procyon.config
+++ b/procyonctl/procyon.config
@@ -1,3 +1,3 @@
-VENUSIA_URL="https://localhost:9999"
+WASM_REGISTRY_URL="https://localhost:9999"
 PROCYON_URL="http://localhost:9090"
 ALCOR_URL="http://localhost:8080"
