--- a/procyonctl/procyon.config
+++ b/procyonctl/procyon.config
@@ -1,3 +1,3 @@
 WASM_REGISTRY_URL="https://registry-cdn.wapm.io/contents"
 PROCYON_URL="http://localhost:9090"
-ALCOR_URL="http://localhost:8080"
+PROCYON_REVERSE_URL="http://localhost:8080"
