--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,12 +33,11 @@ jobs:
           binary_name: "procyon-reverse"
           ldflags: "-s -w"
           extra_files: ./procyon-reverse-proxy/procyon.json
-      - uses: wangyoucao577/go-release-action@v1.16
+  zip-files:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: papeloto/action-zip@v1
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          goos: ${{ matrix.goos }}
-          goarch: ${{ matrix.goarch }}
-          project_path: "./venusia-registry"
-          binary_name: "venusia"
-          ldflags: "-s -w"
-          #extra_files: ./venusia-registry/LICENSE ./venusia-registry/README.txt
+          files: ./procyon-registry
+          dest: procyon-registry.zip
