--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,8 +13,7 @@ jobs:
         with:
           files: ./procyon-registry
           dest: procyon-registry.zip
-      - name: Upload Release
-        uses: ncipollo/release-action@v1
+      - uses: ncipollo/release-action@v1
         with:
           artifacts: "procyon-registry.zip"
           token: ${{ secrets.GITHUB_TOKEN }}
