--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,11 +12,15 @@ jobs:
       - uses: papeloto/action-zip@v1
         with:
           files: ./procyon-registry
-          dest: procyon-registry.zip
-      - uses: ncipollo/release-action@v1
+          dest: ./procyon-registry.zip
+
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        #if: startsWith(github.ref, 'refs/tags/')
         with:
-          artifacts: "procyon-registry.zip"
-          token: ${{ secrets.GITHUB_TOKEN }}
+          files: |
+            procyon-registry.zip
+
   releases-matrix:
     name: Release Procyon Binaries
     runs-on: ubuntu-latest
