--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,7 +39,7 @@ jobs:
           project_path: "./procyon-launcher"
           binary_name: "procyon-launcher"
           ldflags: "-s -w"
-          extra_files: ./procyon-launcher/procyon-launcher.json #./procyonctl/procyonctl ./procyonctl/procyonctl.config
+          extra_files: ./procyon-launcher/procyon-launcher.json
       - uses: wangyoucao577/go-release-action@v1.16
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
