--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -57,7 +57,7 @@ jobs:
       matrix:
         # build and publish in parallel: linux/amd64
         goos: [linux]
-        goarch: [amd64]
+        goarch: [amd64, arm64]
     steps:
       - uses: actions/checkout@v2
       - uses: wangyoucao577/go-release-action@v1.16
