--- a/procyon-cli/.procyon-cli.yaml
+++ b/procyon-cli/.procyon-cli.yaml
@@ -1,16 +1,9 @@
 # 🚧 this is a work in progress
 
 # only for use with the Procyon Registry
+# (it's for testing)
 procyon-registry:
   url: https://localhost:7070
-
-# if Procyon Registry:
-# url: https://localhost:7070/get
-# if wapm.io Registry:
-# url: https://registry-cdn.wapm.io/contents
-#wasm-registry:
-#  url: https://localhost:7070/get
-
 
 procyon-launcher:
   url: http://localhost:9090
